<resources>
    <string name="app_name">МойОрганайзер</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="contactfragment">Go to contacts</string>
    <string name="Taskfragment">Go to tasks</string>
    <string name="Примечание">Примечание</string>
    <string name="СохранитьКонтакт">Сохранить контакт</string>
    <string name="Имя">Имя</string>
    <string name="Адрес">Адрес</string>
    <string name="НомерТелефона">Номер телефона</string>


    <string name="Дата">Дата</string>
    <string name="ВыбратьДату">Выбрать Дату:</string>
    <string name="НачалоСобытия">Начало события</string>
    <string name="КонецСобытия">Конец события</string>
    <string name="КонтактСпиннер">Контакты</string>
    <string name="ЦветСобытия">Цвет события</string>
    <string name="Описание">Описание</string>

    <string name="МоиКонтакты">Мои контакты</string>
    <string name="МоиЗадачи">Мои задачи</string>
    <string name="Чекины">Чекины</string>


    <string name="addTask">Добавить задачу</string>
    <string name="addContact">Добавить контакт</string>

    <string name="createContact">Создать контакт</string>
    <string name="createTask">Создать задачу</string>

    <string name="selectPhoto">Выбрать фото</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="updateItem">Сохранить изменения</string>
    <string name="deleteItem">Удалить</string>

    <string name="UpDelItem">Изменить элемент</string>

    <string name="MyContact">Мой контакт</string>
    <string name="MyTask">Моя задача</string>

    <string name="contact">Контакт</string>
    <string name="task">Задача</string>

    <string name="mycontact">МойКонтакт</string>
    <string name="mytask">МояЗадача</string>

    <string name="dolgota">Долгота</string>
    <string name="shirota">Широта</string>

    <string name="country">Страна</string>
    <string name="city">Город</string>
    <string name="street">Улица</string>
    <string name="house">Дом</string>
    <string name="nameOfPosition">Название</string>
    <string name="DateOfPosition">Дата</string>

    <!-- Map-->
    <string name="toolbarMap">МоиМеста</string>
    <string name="allMaps">Всего мест</string>
    <string name="toolbarAddMap">Добавить место</string>
    <string name="toolbarUpDelMap">Редактировать место</string>
    <string name="toolbarMyMap">Мое место</string>


</resources>
