<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".map.AddMap">

    <LinearLayout
        android:id="@+id/liner"
        android:layout_width="match_parent"
        android:layout_height="802dp"
        android:orientation="vertical">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="?attr/colorPrimary"
            android:minHeight="?attr/actionBarSize"
            app:title = "@string/toolbarAddMap"
            app:titleTextColor="@color/white"
            android:theme="?attr/actionBarTheme"
            app:menu="@menu/menu_map" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="70dp"
            android:orientation="horizontal">

            <EditText
                android:id="@+id/editTVName"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:ems="10"
                android:hint="@string/nameOfPosition"
                android:inputType="text" />

            <EditText
                android:id="@+id/editTVDate"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:ems="10"
                android:hint="@string/DateOfPosition"
                android:inputType="text" />

        </LinearLayout>

        <EditText
            android:id="@+id/editTVCountry"
            android:layout_width="match_parent"
            android:layout_height="70dp"
            android:hint="@string/country"
            android:ems="10"
            android:inputType="text" />

        <EditText
            android:id="@+id/editTVCity"
            android:layout_width="match_parent"
            android:layout_height="70dp"
            android:ems="10"
            android:hint="@string/city"
            android:inputType="text" />

        <EditText
            android:id="@+id/editTVHouse"
            android:layout_width="match_parent"
            android:layout_height="70dp"
            android:ems="10"
            android:hint="@string/house"
            android:inputType="text" />

        <EditText
            android:id="@+id/editTVStreet"
            android:layout_width="match_parent"
            android:layout_height="70dp"
            android:ems="10"
            android:hint="@string/street"
            android:inputType="text" />

        <Space
            android:layout_width="match_parent"
            android:layout_height="20dp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="70dp"
            android:orientation="horizontal">

            <EditText
                android:id="@+id/editTVShirota"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:ems="10"
                android:hint="@string/shirota"
                android:inputType="number|numberDecimal|numberSigned" />

            <EditText
                android:id="@+id/editTVDolgota"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:ems="10"
                android:hint="@string/dolgota"
                android:inputType="number|numberDecimal|numberSigned" />

        </LinearLayout>

        <com.yandex.mapkit.mapview.MapView
            android:id="@+id/mapview"
            android:layout_width="match_parent"
            android:layout_height="match_parent" />

    </LinearLayout>
</FrameLayout>