<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:layout="@layout/fragment_add_contacts"
    tools:context=".AddContacts">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/white"
        android:orientation="vertical">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:title="@string/МоиКонтакты"
            app:titleTextColor="@color/white"
            android:background="?attr/colorPrimary"
            android:minHeight="?attr/actionBarSize"
            android:theme="?attr/actionBarTheme" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="179dp"
            android:orientation="horizontal">

            <Space
                android:id="@+id/spaceid"
                android:layout_width="130dp"
                android:layout_height="match_parent"
                android:layout_weight="0" />

            <androidx.cardview.widget.CardView
                android:layout_width="120dp"
                android:layout_height="178dp"
                android:clipToPadding="true"
                android:layout_weight="0">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical">

                    <ImageView
                        android:id="@+id/imageView3"
                        android:layout_width="120dp"
                        android:layout_height="120dp"
                        tools:src="@tools:sample/avatars" />

                    <Button
                        android:id="@+id/button2"
                        android:layout_width="120dp"
                        android:layout_height="wrap_content"
                        android:text="@string/selectPhoto"
                        app:cornerRadius="0dp" />
                </LinearLayout>

            </androidx.cardview.widget.CardView>
        </LinearLayout>

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingStart="10dp"
            app:cardCornerRadius="10dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <EditText
                    android:id="@+id/nameET"
                    android:layout_width="match_parent"
                    android:layout_height="80dp"
                    android:layout_marginStart="10dp"
                    android:ems="10"
                    android:hint="@string/Имя"
                    android:inputType="text" />

                <EditText
                    android:id="@+id/phoneET"
                    android:layout_width="match_parent"
                    android:layout_height="80dp"
                    android:layout_marginStart="10dp"
                    android:ems="10"
                    android:hint="@string/НомерТелефона"
                    android:inputType="phone" />

                <EditText
                    android:id="@+id/adressET"
                    android:layout_width="match_parent"
                    android:layout_height="80dp"
                    android:layout_marginStart="10dp"
                    android:ems="10"
                    android:hint="@string/Адрес"
                    android:inputType="text" />

                <Space
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />

            </LinearLayout>

        </androidx.cardview.widget.CardView>

        <Space
            android:layout_width="match_parent"
            android:layout_height="30dp" />

        <TextView
            android:id="@+id/textView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"
            android:text="@string/Примечание"
            android:textColorLink="#F6F6F6" />

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="180dp"
            app:cardCornerRadius="10dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <EditText
                    android:id="@+id/editTextText3"
                    android:layout_width="match_parent"
                    android:layout_height="80dp"
                    android:layout_marginStart="10dp"
                    android:layout_marginEnd="10dp"
                    android:accessibilityHeading="false"
                    android:contentDescription="d"
                    android:inputType="text"
                    android:text="_"
                    tools:ignore="EditableContentDescCheck" />


            </LinearLayout>
        </androidx.cardview.widget.CardView>

        <Button
            android:id="@+id/Donebutton"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:text="@string/createContact"
            app:cornerRadius="0dp" />

    </LinearLayout>
</FrameLayout>